<resources>
    <string name="app_name">音乐课程表</string>
    <string name="menu_edit">编辑当天</string>
    <string name="menu_schedule">排课</string>
    <string name="next_day">后一天</string>
    <string name="prev_day">前一天</string>
    <string name="temp">（临时）</string>
    <string name="add">添加课程</string>
    <string name="save">保存</string>
    <string name="student_name">学生姓名：</string>
    <string name="start_time">上课时间：</string>
    <string name="duration">上课时长：</string>
    <string name="minute">分钟</string>
    <string name="type">课程类型：</string>
    <string name="no_name">请输入学生姓名！</string>
    <string name="no_time">请选择上课时间！</string>
    <string name="no_duration">请输入上课时长！</string>
    <string name="save_success">保存成功</string>
    <string name="save_empty">还没有添加任何课程哦~</string>
    <string name="save_fail">保存失败了</string>
</resources>
