<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/edit_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/edit_prev_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/prev_day"
            android:textColor="@color/clickable_text_color"/>
        <TextView
            android:id="@+id/edit_next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/next_day"
            android:layout_alignParentEnd="true"
            android:textColor="@color/clickable_text_color"/>

    </RelativeLayout>
    <ListView
        android:id="@+id/edit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"></ListView>
    <Button
        android:id="@+id/edit_add_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_list"
        android:layout_marginTop="20dp"
        android:text="@string/add"/>
    <Button
        android:id="@+id/edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_add_class"
        android:layout_marginTop="10dp"
        android:text="@string/save"/>

</RelativeLayout>