<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">
    <LinearLayout
        android:id="@+id/edit_class_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="@dimen/common_text_size"/>
        <EditText
            android:id="@+id/edit_class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_size"
            android:layout_marginLeft="@dimen/common_spacing"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_class_start_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_class_name_layout"
        android:layout_marginTop="@dimen/common_spacing">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="@dimen/common_text_size"/>
        <TextView
            android:id="@+id/edit_class_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_size"
            android:layout_marginLeft="@dimen/common_spacing" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_class_duration_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_class_start_time_layout"
        android:layout_marginTop="@dimen/common_spacing">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="@dimen/common_text_size"/>
        <EditText
            android:id="@+id/edit_class_duration"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_spacing"
            android:textSize="@dimen/common_text_size"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textSize="@dimen/common_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_class_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_class_duration_layout"
        android:layout_marginTop="@dimen/common_spacing">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="@dimen/common_text_size"/>
        <Spinner
            android:id="@+id/edit_class_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="@dimen/common_spacing"/>
    </LinearLayout>
    <Button
        android:id="@+id/edit_class_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/save"/>
</RelativeLayout>